fixes to home bento container spacing

--- a/src/index.css
+++ b/src/index.css
@@ -35,8 +35,6 @@
 }
 .app {
   display: flex;
-  width: 100vw;
-  height: 100vh; 
 }
 .sidebar {
   width: 25vw;
@@ -127,8 +125,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 100%;
+  box-sizing: border-box;
+  min-height: 100vh;
 }
 .home h1 {
   font-size: 3rem;
@@ -140,10 +138,13 @@
 }
 
 .bento-container {
-  display: grid;
-  grid: 1fr 1fr/ 1fr 1fr 1fr;
+  display: inline-grid;
+  overflow-y: auto;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, minmax(0, auto));
   gap: 30px;
-  margin: 30px;
+  margin: 15px 15px;
+  padding: 15px;
 }
 .bento-container .bento-box:nth-child(1) {
   grid-area: 1 / 1 / span 1 / span 1; 
@@ -159,8 +160,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 15px;
   border-radius: 10px;
-  padding: 20px;
   border: var(--color-light-grey) 1px solid;
   color: var(--color-white);
   background-color: #141414;
@@ -173,8 +174,8 @@
   transform: scale(1.05);
 }
 .bento-box h2 {
-  font-size: 5rem;
-  margin-bottom: 10px;
+  font-size: 4rem;
+  margin: 0;
 }
 /* top | right | bottom | left */
 .contact {
@@ -334,6 +335,7 @@
 
 body {
   margin: 0;
+  padding: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
